welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: '(' expected but identifier found.
	for i <- 0 to T.length-1
            ^indexOfValue:4: error: ')' expected but '=' found.
	if (tab[i] = value ) {return i }
                   ^indexOfValue:6: error: illegal start of simple expression
}
^